--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,26 @@
 {
-  "compilerOptions": {
-    // General
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js",
-    "target": "ESNext",
-
-    // Modules
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "isolatedModules": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "noEmit": true,
-
-    // Type Checking & Safety
-    "strict": true,
-    "types": ["vite/client"]
-  }
+	"compilerOptions": {
+		// General
+		"jsx": "preserve",
+		"jsxImportSource": "solid-js",
+		"target": "ESNext",
+		"baseUrl": "./",
+		"paths": {
+			"~/*": [
+				"src/*"
+			]
+		},
+		// Modules
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"isolatedModules": true,
+		"module": "ESNext",
+		"moduleResolution": "bundler",
+		"noEmit": true,
+		// Type Checking & Safety
+		"strict": true,
+		"types": [
+			"vite/client"
+		]
+	}
 }
