--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"@types/node": "^25.2.0",
 		"solid-devtools": "^0.34.3",
 		"typescript": "^5.7.2",
 		"vite": "^7.1.4",
